--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>FREAK BUSINESS</title>
+    <meta property="og:title" content="freak.business" />
     
 </head>
 <body>
