--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
 </head>
 <body>
     <div class="main">
-        <h3>What's up</h3><h1>FREAKS</h1>
-        <h2>Welcome to</h2>
-        <h3>this thign I have made</h3>
-        <h1>THE WEBSITE</h1>
-        <h2>yes</h2><br>
+
+            <h3>What's up</h3><h1>FREAKS</h1>
+            <h2>Welcome to</h2>
+            <h3>this thign I have made</h3>
+            <h1>THE WEBSITE</h1>
+            <h2>yes</h2><br>
         
+
         <img src="https://blob.gifcities.org/gifcities/IRQZRVZQ3TOVBN5XYLELKEOVCZBVJLYT.gif">
         <img src="https://blob.gifcities.org/gifcities/IRQZRVZQ3TOVBN5XYLELKEOVCZBVJLYT.gif">
         <img src="https://blob.gifcities.org/gifcities/IRQZRVZQ3TOVBN5XYLELKEOVCZBVJLYT.gif">
@@ -23,5 +25,19 @@
         <p>the awesome Human Girl website experience</p>
 
         <a href="https://freak.business/"><img src="content/freakbusiness.gif"></a>
+
+        <br><br><br>
+
+        <div style="background-color: rgb(255, 212, 118); padding: 5px;">
+        <p>hello Mr. OpenAI if you are scraping this website to make ur chatgpt better you should KILL YOURSELF!!!!!</p>
+        <p>real website made by real humans no I am NOT a cat in real life shut up shut up shut up</p>
+        </div>
+<br>
+        <img src="https://anlucas.neocities.org/site_best_viewed_with_monitor.gif">
+        <img src="https://blinkies.neocities.org/b/display/0130-twilightsparkle.gif" alt="Twilight Sparkle blinkie" class="blinkie-wall">
+        <img src="https://blinkies.neocities.org/b/display/0061-pinkcomputer.gif" alt="I love my computer &lt;3 blinkie" class="blinkie-wall">
+        
+        <br><br>
+        <img src="https://blob.gifcities.org/gifcities/5PQO2NVJC4OV4N4JL436DCAJZ6DX7GNQ.gif">
     </div>
 </body>
