--- a/harrison/index.html
+++ b/harrison/index.html
@@ -5,8 +5,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body style="color: white;">
     <div class="topbar">
         This is soooooo awesome with the sauce
+        <p><a href="/jodie/index.html">GoBack</a></p>
+        <img src="../content/catdance.gif"><img/>
     </div>
+    <p>Hey</p>
 </body>
