page title wahoo

--- a/jodie/index.html
+++ b/jodie/index.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<head>
+    <title>Jodie/Ellie/Abby!</title>
+    <meta property="og:title" content="freak.business" />
+    <link rel="stylesheet" href="style.css">
+</head>
+
 wowsers im on the internet, anyway look at this sick ass green monkey
 
 <img style="width: 100%; position: absolute; top: 50%; left: 0;" src="https://64.media.tumblr.com/71a729c07330539e046eca9cf3006205/cdedacdbc41c5bb0-a5/s400x600/523aa624bbd3f515b490040782344f94f7f4a4cd.gif"/> 
