--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     
         <h2>Directory</h2>
         <p><a href="/piers">Piers</a></p>
-        <p><a href="/harrison">Harrison</a></p>
+        <p><a href="/hailey">Hailey</a></p>
         <p><a href="/jodie">Jodie</a></p>
         <p><a href="/marcie">Marcie</a></p>
         <p><a href="/evelyn">Evelyn</a></p>
