--- a/hailey/index.html
+++ b/hailey/index.html
@@ -19,9 +19,9 @@
         <div class="rat" id="rat" style="position: absolute;">
             <img src="../hailey/content/resourceful_rat_steal.gif" style="image-rendering: pixelated;scale: 2;transform: translateY(-36px) translateX(16px)">
         </div>
-        <div style="height: 250px; width: 500px;z-index: -5;position: absolute;transform: translateY(-230px) translateX(0px);display: flex;align-items: center;justify-content: center;font-family: 'Pixel';font-size: 1.5em;" id="note">
+        <div style="height: 250px; width: 500px;z-index: -5;position: absolute;transform: translateY(-230px) translateX(0px);display: flex;align-items: center;justify-content: center;font-family: 'Pixel';font-size: 1.5em;overflow-wrap: break-word;text-align: center;" id="note">
             <img src="/hailey/content/LetterBackground.png" style="position: absolute;image-rendering: pixelated;scale: 3;transform: translateY(-0px) translateX(0px); z-index: -1;">
-            This is so awesome with the sauce??
+            Meetup at  ________ <br> From 1:00 to 4:00 on the 28th of Feb <br> Bring arts and crafts supplies of any kind <br> be there or be not there, bozos! <br><br> -R.R
         </div>
     </div>
 </body>
