--- a/hailey/index.html
+++ b/hailey/index.html
@@ -23,5 +23,9 @@
             <img src="/hailey/content/LetterBackground.png" style="position: absolute;image-rendering: pixelated;scale: 3;transform: translateY(-0px) translateX(0px); z-index: -1;">
             Meetup at  ________ <br> From 1:00 to 4:00 on the 28th of Feb <br> Bring arts and crafts supplies of any kind <br> be there or be not there, bozos! <br><br> -R.R
         </div>
+        <div style="height: 100px; width: 160px;z-index: 10;position: absolute;transform: translateY(-100px) translateX(-200px);display: flex;align-items: center;justify-content: center;font-family: 'Pixel';font-size: 1.5em;overflow-wrap: break-word;text-align: center;scale: 0.8;line-height: 80%;" id="note">
+            <img src="/hailey/content/wood_sign_burst_001.png" style="position: absolute;image-rendering: pixelated;scale: 8;transform: translateY(3px) translateX(0px);z-index: -10;">
+            Do not leave unattended <br> under any circumstances
+        </div>
     </div>
 </body>
